<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="need_an_account">need an account?</string>
    <string name="signup_with_email">Signup with email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_login">Go to login</string>
</resources>